--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,28 @@
-# 飞书应用凭证（必填）
+# 飞书应用凭证 / Feishu app credentials（必填 / required）
 FEISHU_APP_ID=cli_xxxxxxxxx
-FEISHU_APP_SECRET_PATH=~/.clawdbot/secrets/feishu_app_secret
+FEISHU_APP_SECRET_PATH=~/.openclaw/secrets/feishu_app_secret
 
-# Clawdbot 配置（通常不需要改）
-CLAWDBOT_CONFIG_PATH=~/.clawdbot/clawdbot.json
-CLAWDBOT_AGENT_ID=main
+# 飞书域名 / Feishu domain (feishu = 国内版, lark = 国际版)
+# FEISHU_DOMAIN=feishu
+
+# 连接模式 / Connection mode
+# websocket = 长连接（默认，不需要公网）
+# webhook = HTTP 回调（Lark 国际版必须用 webhook，需要公网可访问）
+# FEISHU_CONNECTION_MODE=websocket
+
+# Webhook 模式配置（仅 webhook 模式需要）
+# FEISHU_WEBHOOK_PORT=3000
+# FEISHU_WEBHOOK_PATH=/feishu/events
+# FEISHU_ENCRYPT_KEY=
+# FEISHU_VERIFICATION_TOKEN=
+
+# OpenClaw/Clawdbot 配置路径（通常不需要改）
+# OPENCLAW_CONFIG_PATH=~/.openclaw/openclaw.json
+OPENCLAW_AGENT_ID=main
+
+# 向后兼容（旧变量仍可用）/ Backward compatibility (legacy env vars still work)
+# CLAWDBOT_CONFIG_PATH=~/.clawdbot/clawdbot.json
+# CLAWDBOT_AGENT_ID=main
 
 # "正在思考…"提示延迟（毫秒），设为 0 关闭
 FEISHU_THINKING_THRESHOLD_MS=2500
@@ -13,13 +31,13 @@ FEISHU_THINKING_THRESHOLD_MS=2500
 FEISHU_BRIDGE_DEBUG=0
 
 # 本地媒体白名单（入站：允许从消息文本中读取本地图片路径）
-# 默认：~/.clawdbot/media
-FEISHU_BRIDGE_ALLOWED_LOCAL_MEDIA_DIRS=~/.clawdbot/media
+# 默认：~/.openclaw/media,~/.clawdbot/media
+FEISHU_BRIDGE_ALLOWED_LOCAL_MEDIA_DIRS=~/.openclaw/media,~/.clawdbot/media
 
 # 本地媒体白名单（出站：允许把 AI 生成的本地文件发回飞书）
-# 默认会包含：~/.clawdbot/media + 系统临时目录 + /tmp
+# 默认会包含：~/.openclaw/media + ~/.clawdbot/media + 系统临时目录 + /tmp
 # 如需自定义，可显式设置为逗号分隔：
-# FEISHU_BRIDGE_ALLOWED_OUTBOUND_MEDIA_DIRS=~/.clawdbot/media,/tmp
+# FEISHU_BRIDGE_ALLOWED_OUTBOUND_MEDIA_DIRS=~/.openclaw/media,~/.clawdbot/media,/tmp
 
 # 大小限制（单位 MB）
 FEISHU_BRIDGE_MAX_LOCAL_FILE_MB=15
